<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold"
            android:layout_marginTop="24sp"
            android:text="@string/app_name"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_marginTop="24sp"
            android:textSize="20sp"
            android:text="@string/made_by"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/made_for"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:textSize="24sp"
            android:text="@string/made_in"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:text="@string/github"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            app:icon="@drawable/ic_github_black_v24"/>

</LinearLayout>